# AttnForge-public

./: .gitignore  LICENSE  README.md
flashinfer_engine/: README.md  pyproject.toml
flashinfer_engine/benchmarks/: README.md  benchmark_batching.py  benchmark_decode.py  benchmark_prefill.py  compare_commits.py  plot_correctness.py  plot_results.py  profile_kernels.py
flashinfer_engine/benchmarks/results/: decode_llama3_2_1b_flashattn_v0_b1_s1024_20260510T005333410893.json  decode_llama3_2_1b_flashattn_v0_b1_s2048_20260510T005333442928.json  decode_llama3_2_1b_flashattn_v0_b1_s4096_20260510T005333490356.json  decode_llama3_2_1b_flashattn_v0_b1_s512_20260510T005333387737.json  decode_llama3_2_1b_flashattn_v0_b1_s512_20260516T120311315251.json  decode_llama3_2_1b_flashattn_v0_b4_s1024_20260510T005333539403.json  decode_llama3_2_1b_flashattn_v0_b4_s2048_20260510T005333576575.json  decode_llama3_2_1b_flashattn_v0_b4_s4096_20260510T005333633600.json  decode_llama3_2_1b_flashattn_v0_b4_s512_20260510T005333512670.json  decode_llama3_2_1b_sdpa_naive_b1_s1024_20260510T005333398395.json  (+27 more)
flashinfer_engine/configs/: default.yaml
flashinfer_engine/csrc/: compile.py
flashinfer_engine/docs/: ARCHITECTURE.md  ENVIRONMENT.md  EXECUTION_PLAN.md  PERFORMANCE.md  PROJECT_ROADMAP.md  README.md  design_v3_paged_attention.md
flashinfer_engine/examples/: serve_demo.py
flashinfer_engine/scripts/: run_all.sh
flashinfer_engine/tests/: README.md  conftest.py  test_correctness.py  test_kv_cache.py  test_smoke.py  test_v1_pv_wmma_debug.py  test_v2_gqa_decode.py
(+25 files in other folders)
